<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/black"
  android:orientation="vertical"
  android:layout_margin="30dp"
  >
  <android.support.design.widget.TextInputEditText
    android:id="@+id/et_signup_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:background="@null"
    android:drawableLeft="@drawable/ic_avatar"
    android:drawablePadding="12dp"
    android:gravity="start|center"
    android:hint="@string/name"
    android:inputType="textCapSentences"
    android:maxLines="1"
    android:textColor="@color/white"
    android:textColorHint="#48ffffff"/>

  <include layout="@layout/line_horizontal"/>

  <android.support.design.widget.TextInputEditText
    android:id="@+id/et_email_signup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:background="@null"
    android:drawableLeft="@drawable/ic_envelope"
    android:drawablePadding="12dp"
    android:gravity="start|center"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:maxLines="1"
    android:textColor="@color/white"
    android:textColorHint="#48ffffff"/>

  <include layout="@layout/line_horizontal"/>

  <android.support.design.widget.TextInputEditText
    android:id="@+id/et_mobile_signup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:background="@null"
    android:drawableLeft="@drawable/ic_phone"
    android:drawablePadding="12dp"
    android:gravity="start|center"
    android:hint="@string/mobile"
    android:digits="0123456789"
    android:inputType="phone"
    android:maxLength="10"
    android:maxLines="1"
    android:textColor="@color/white"
    android:textColorHint="#48ffffff"/>

  <include layout="@layout/line_horizontal"/>

  <android.support.design.widget.TextInputEditText
    android:id="@+id/et_password_signup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:background="@null"
    android:drawableLeft="@drawable/ic_key"
    android:drawablePadding="12dp"
    android:gravity="start|center"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:maxLines="1"
    android:textColor="@color/white"
    android:textColorHint="#48ffffff"/>

  <include layout="@layout/line_horizontal"/>

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="24dp"
    android:gravity="center"
    android:orientation="horizontal">

    <CheckBox
      android:id="@+id/tncchecksignup"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:button="@drawable/drawable_checkbox"
      android:checked="true"
      android:padding="4dp"
      />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text= "@string/i_agree"
      android:textColor="@color/white"
      />

    <TextView
      android:id="@+id/tncsignup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="4dp"
      android:text="@string/terms_and_conditions"
      android:textColor="@color/colorAccent"

      />
  </LinearLayout>

  <RelativeLayout
    android:layout_width="100dp"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:background="@drawable/bg_btn_rounded_blue"

    android:gravity="center">

    <Button
      android:id="@+id/btn_signup"
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:text="@string/signup"
      android:background="@color/transparent"
      android:textColor="@color/white"
      />

    <ProgressBar
      android:id="@+id/progressBar_data_loading_signup"
      style="?android:attr/progressBarStyleLarge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:visibility="gone"
      android:indeterminateDrawable="@drawable/bg_progress_circular"/>

  </RelativeLayout>

</LinearLayout>
