<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@color/black">
  <android.support.design.widget.TextInputEditText
    android:id="@+id/et_email_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:background="@null"
    android:drawableLeft="@drawable/ic_envelope"
    android:drawablePadding="12dp"
    android:gravity="start|center"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:maxLines="1"
    android:textColor="@color/white"
    android:textColorHint="#48ffffff"/>

<include layout="@layout/line_horizontal"/>

  <android.support.design.widget.TextInputEditText
    android:id="@+id/et_password_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:background="@null"
    android:drawableLeft="@drawable/ic_key"
    android:drawablePadding="12dp"
    android:gravity="start|center"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:maxLines="1"
    android:textColor="@color/white"
    android:textColorHint="#48ffffff"/>

  <include layout="@layout/line_horizontal"/>

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="24dp"
    android:gravity="center"
    android:orientation="horizontal">


    <TextView
      android:id="@+id/txtforgot"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_forgot_password"
      android:textColor="@color/colorAccent"
      />
  </LinearLayout>
  <RelativeLayout
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="40dp"
    android:gravity="center"
    android:background="@drawable/bg_btn_rounded_blue"

    >

    <Button
      android:id="@+id/btn_login"
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@color/transparent"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:text="@string/text_login"
      android:textColor="@color/white"/>

    <ProgressBar
      android:id="@+id/progressBar_data_loading_login"
      style="?android:attr/progressBarStyleLarge"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_centerInParent="true"
      android:visibility="gone"
      android:indeterminateDrawable="@drawable/bg_progress_circular"/>

  </RelativeLayout>

</LinearLayout>
