<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"

  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"

  >

  <include layout="@layout/toolbar_common" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:weightSum="100">


    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginTop="10dp"
      android:layout_weight="25"
      android:background="@color/black"
      android:paddingTop="10dp">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/refer" />

    </RelativeLayout>



    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="65"
      android:background="@color/black"
      android:orientation="vertical"
      android:weightSum="10">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:padding="4dp"
          android:text="@string/love_our_app"
          android:textColor="@color/white"
          android:textSize="16sp" />

        <TextView
          android:id="@+id/refer_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:paddingTop="4dp"
          android:paddingBottom="4dp"
          android:paddingLeft="20dp"
          android:paddingRight="20dp"
          android:text="@string/invite_your_friends"
          android:textColor="@color/white"
          android:textSize="16sp" />
      </LinearLayout>

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="6">

        <TextView
          android:id="@+id/message2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:layout_gravity="center"
          android:textColor="@color/white"
          android:textSize="17sp"/>

        <TextView
          android:id="@+id/tt1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/message2"
          android:layout_centerHorizontal="true"
          android:layout_gravity="center"
          android:text="@string/your_referral_code"
          android:textColor="#999999"
          android:textSize="15sp"
          android:textStyle="normal" />

        <TextView
          android:id="@+id/referal_code"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="12dp"
          android:layout_below="@+id/tt1"
          android:layout_centerHorizontal="true"
          android:layout_gravity="bottom|center"
          android:layout_marginTop="10dp"
          android:text=""
          android:background="@drawable/bg_dotted_line"
          android:textColor="@color/white"
          android:textSize="30sp"
          android:textStyle="normal" />
      </RelativeLayout>

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:gravity="bottom">

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:orientation="horizontal">

          <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/made_with"
            android:textColor="@color/white"
            android:textSize="15sp" />

          <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_heart"
            />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/in_india"
            android:textColor="@color/white"
            android:textSize="15sp" />


        </LinearLayout>

      </RelativeLayout>
      <TextView
        android:id="@+id/tv_refer_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:gravity="center"/>


    </LinearLayout>

    <blackflame.com.zymepro.view.custom.RippleLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="10"
      android:layout_marginTop="4dp"
      app:mrl_rippleAlpha="0.2"
      app:mrl_rippleColor="#585858"
      app:mrl_rippleDelayClick="true"
      android:layout_marginBottom="16dp"
      app:mrl_rippleHover="true"
      android:layout_gravity="center_horizontal"
      app:mrl_rippleOverlay="true">

      <Button
        android:layout_gravity="center"
        android:id="@+id/refer_friend"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rectangle_button"
        android:padding="8dp"
        android:text="@string/share"
        android:textStyle="bold"
        android:textColor="@color/white">
      </Button>

    </blackflame.com.zymepro.view.custom.RippleLayout>

  </LinearLayout>


</LinearLayout>
