<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  android:id="@+id/activity_document"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#000"
  >
  <include layout="@layout/toolbar_common"/>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_below="@+id/toolbar_common">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="4dp"
          android:id="@+id/licence">
          <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_licence"
            android:padding="8dp"/>
          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/licence"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textColor="@color/white"
            />
        </RelativeLayout>
        <View
          android:layout_width="1dp"
          android:layout_height="match_parent"
          android:background="@drawable/drawable_document_line"/>
        <RelativeLayout
          android:id="@+id/registration"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="4dp">
          <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rc"
            android:layout_marginBottom="12dp"
            android:padding="12dp"/>
          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/registration_ncertificate"
            android:layout_marginBottom="4dp"
            android:textSize="14sp"
            android:padding="4dp"
            android:gravity="center"
            android:textColor="@color/white"
            />
        </RelativeLayout>
      </LinearLayout>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/drawable_center_documet_view"
        />
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RelativeLayout
          android:id="@+id/puc"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1">
          <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_puc"
            android:padding="8dp"/>
          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:text="@string/puc"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/white"
            />
        </RelativeLayout>
        <View
          android:layout_width="1dp"
          android:layout_height="match_parent"
          android:background="@drawable/drawaable_view_document_below"/>
        <RelativeLayout
          android:id="@+id/insurance"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          >
          <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_insurance"
            android:padding="8dp"/>
          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_alignParentBottom="true"
            android:text="@string/insurance"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/white"
            />
        </RelativeLayout>
      </LinearLayout>

    </LinearLayout>
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical"
      android:layout_marginTop="32dp">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/keep_track"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:padding="8dp"
        android:gravity="center"/>
      <Button
        android:id="@+id/add_document"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle_button"
        android:text="Add Document"
        android:layout_alignParentBottom="true"
        android:paddingRight="60dp"
        android:paddingLeft="60dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"

        android:textColor="#fff"/>
    </RelativeLayout>
  </LinearLayout>
</RelativeLayout>
